--- a/Notebook/SVM.ipynb
+++ b/Notebook/SVM.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -54,9 +54,128 @@
         "id": "ZFBUA-hJrFuD",
         "outputId": "146e2559-fc4d-4ffd-cd07-b61fc120c2a2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Cammeo' 'Osmancik']\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Area</th>\n",
+              "      <th>Perimeter</th>\n",
+              "      <th>Major_Axis_Length</th>\n",
+              "      <th>Minor_Axis_Length</th>\n",
+              "      <th>Eccentricity</th>\n",
+              "      <th>Convex_Area</th>\n",
+              "      <th>Extent</th>\n",
+              "      <th>Class</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>15231</td>\n",
+              "      <td>525.578979</td>\n",
+              "      <td>229.749878</td>\n",
+              "      <td>85.093788</td>\n",
+              "      <td>0.928882</td>\n",
+              "      <td>15617</td>\n",
+              "      <td>0.572896</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>14656</td>\n",
+              "      <td>494.311005</td>\n",
+              "      <td>206.020065</td>\n",
+              "      <td>91.730972</td>\n",
+              "      <td>0.895405</td>\n",
+              "      <td>15072</td>\n",
+              "      <td>0.615436</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>14634</td>\n",
+              "      <td>501.122009</td>\n",
+              "      <td>214.106781</td>\n",
+              "      <td>87.768288</td>\n",
+              "      <td>0.912118</td>\n",
+              "      <td>14954</td>\n",
+              "      <td>0.693259</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>13176</td>\n",
+              "      <td>458.342987</td>\n",
+              "      <td>193.337387</td>\n",
+              "      <td>87.448395</td>\n",
+              "      <td>0.891861</td>\n",
+              "      <td>13368</td>\n",
+              "      <td>0.640669</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>14688</td>\n",
+              "      <td>507.166992</td>\n",
+              "      <td>211.743378</td>\n",
+              "      <td>89.312454</td>\n",
+              "      <td>0.906691</td>\n",
+              "      <td>15262</td>\n",
+              "      <td>0.646024</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    Area   Perimeter  Major_Axis_Length  Minor_Axis_Length  Eccentricity  \\\n",
+              "0  15231  525.578979         229.749878          85.093788      0.928882   \n",
+              "1  14656  494.311005         206.020065          91.730972      0.895405   \n",
+              "2  14634  501.122009         214.106781          87.768288      0.912118   \n",
+              "3  13176  458.342987         193.337387          87.448395      0.891861   \n",
+              "4  14688  507.166992         211.743378          89.312454      0.906691   \n",
+              "\n",
+              "   Convex_Area    Extent  Class  \n",
+              "0        15617  0.572896      0  \n",
+              "1        15072  0.615436      0  \n",
+              "2        14954  0.693259      0  \n",
+              "3        13368  0.640669      0  \n",
+              "4        15262  0.646024      0  "
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "rice = pd.read_excel('rice.xlsx')\n",
+        "rice = pd.read_excel(\"../data/rice.xlsx\")\n",
         "\n",
         "le = LabelEncoder()\n",
         "rice['Class'] = le.fit_transform(rice['Class'])  # Cammeo -> 0 (or 1)\n",
