--- a/Notebook/DT_&_RF.ipynb
+++ b/Notebook/DT_&_RF.ipynb
@@ -29,8 +29,6 @@
         "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
-        "from google.colab import drive\n",
-        "drive.mount('/mnt/drive')"
       ]
     },
     {
@@ -42,7 +40,7 @@
       "outputs": [],
       "source": [
         "#@title Import data\n",
-        "rice = pd.read_excel('/mnt/drive/MyDrive/Rice_Cammeo_Osmancik.xlsx')\n",
+        "rice = pd.read_excel('../data/rice.xlsx')\n",
         "X = rice.drop(\"Class\", axis=1)\n",
         "y = rice[\"Class\"].copy()\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
